# PPOISlabs

Laba1/PPOISlab1/: cantor_test  cantor_test-CantorSet.gcda  cantor_test-CantorSet.gcno  cantor_test-test_cantor_set.gcda  cantor_test-test_cantor_set.gcno  main.cpp  workk
Laba1/PPOISlab1.1/: main.cpp  matrix_test  matrix_test-Matrix.gcda  matrix_test-Matrix.gcno  matrix_test-test_matrix.gcda  matrix_test-test_matrix.gcno
Laba1/PPOISlab1.1/src/: Matrix.cpp
Laba1/PPOISlab1.1/tests/: test_matrix.cpp
Laba1/PPOISlab1/include/: CantorSet.hpp  MySet.hpp  SimpleSet.hpp
Laba1/PPOISlab1/src/: CantorSet.cpp
Laba1/PPOISlab1/tests/: test_cantor_set.cpp
Laba2/: Accommodation.hpp  Accomodation.cpp  Address.cpp  Address.hpp  BackupManager.cpp  BackupManager.hpp  Booking.cpp  Booking.hpp  BusRide.cpp  BusRide.hpp  BusRoute.cpp  BusRoute.hpp  BusStop.cpp  BusStop.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Company.cpp  Company.hpp  Complaint.cpp  Complaint.hpp  Consultant.cpp  Consultant.hpp  ContactInfo.cpp  ContactInfo.hpp  Coordinates.cpp  Coordinates.hpp  Currency.hpp  CurrencyConverter.cpp  CurrencyConverter.hpp  CurrencyPair.cpp  CurrencyPair.hpp  CustomExceptions.hpp  DataRange.cpp  DateRange.hpp  Department.cpp  Department.hpp  Discount.cpp  Discount.hpp  Driver.cpp  (+61 more)
Laba2/tests/: AccommodationTests.cpp  BasicClassesTests.cpp  BookingTests.cpp  BusRideTests.cpp  BusRouteTests.cpp  BusStopTests.cpp  ClientTests.cpp  CompanyTests.cpp  ConsultantTests.cpp  CurrencyTests.cpp  DriverTests.cpp  EmployeeTests.cpp  GuideTests.cpp  HELPERFILE.cpp  HRTests.cpp  LoggerTests.cpp  ManagerTests.cpp  NotificationManagerTests.cpp  NotificationServiceTests.cpp  PassporLicesnceDiscountTests.cpp  PaymentTests.cpp  PersonnelTests.cpp  ReportTests.cpp  ReviewTests.cpp  RouteTests.cpp  StatisticsTests.cpp  SupporterTests.cpp  TourTests.cpp  TransportCompanyTests.cpp  TransportTests.cpp  UtilityClassesTests.cpp  ValidatorTests.cpp  VisaServiceTests.cpp
PPOISlab1.1/include/: Matrix.hpp
PPOISlab1.1/src/: my_matrix.cpp
PPOISlab1.1/tests/: test_matrix.cpp
PPOISlab1/include/: CantorSet.hpp  MySet.hpp
PPOISlab1/src/: CantorSet.cpp
PPOISlab1/tests/: test_cantor_set.cpp
RASCHET/problem-solver/cxx/: CMakeCache.txt  CMakeLists.txt
RASCHET/problem-solver/cxx/example-module/: EconomicModule.cpp  EconomicModule.hpp
RASCHET/problem-solver/cxx/example-module/agents/: CalculateCentralityAgent.cpp  CalculateCentralityAgent.hpp  FindConnectedComponentsAgent.cpp  FindConnectedComponentsAgent.hpp
RASCHET/problem-solver/cxx/example-module/keynodes/: Keynodes2.hpp
RASCHET/subject_domain_of_economic_ecosystem/: economic_ecosystem.scs
(+2 files in other folders)
